--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -263,7 +263,7 @@ nav a {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
-.grid > article text {
+.grid > article p {
     display: -webkit-box;
     -webkit-line-clamp: 2; /* number of lines to show */
             line-clamp: 2; 
