--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@ body {
     font-family: Poppins;
     font-style: normal;
     color: #000000;
+    scroll-behavior: smooth;
 }
 
 /* Navbar */
@@ -323,6 +324,14 @@ article a{
     box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.2);
     border-radius: 18px;
     cursor: pointer;
+}
+
+.katalog .donlot:hover {
+    background-color: #3dac2c;
+}
+
+.news .lihat:hover {
+    background-color: #3dac2c;
 }
 
 .teksdonlot {
