--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,7 +47,7 @@ nav a {
     display: none;
 }
 
-@media only screen and (max-width: 800px) {
+/* @media only screen and (max-width: 800px) {
     nav ul {
         position: absolute;
         top: 70px;
@@ -70,17 +70,20 @@ nav a {
         display: block;
         cursor: pointer;
     }
-}
+} */
 
 /* Slider */
 .slider {
     position: relative;
+    top: 0;
+    z-index: -1;
+    height: 50vw;
     width: 100%;
     background: #5f5e5e;
 }
 
 .myslider {
-    height: 655px;
+    height: 50vw;
     display: none;
     overflow: hidden;
 }
@@ -233,6 +236,23 @@ nav a {
     height: 450px;
 }
 
+.mycard {
+    border-radius: 25px;
+    border: none;
+    box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.3);
+    transition: transform .3s;
+}
+
+.mycard:hover {
+    transform: translate(5px);
+    box-shadow:  2px 2px 26px 0px rgba(0,0,0,0.3);;
+}
+
+.mycard img {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
 .grid {
     margin-top : 50px;
     margin-left : auto;
@@ -254,6 +274,7 @@ nav a {
     text-align: center;
     transition: transform .3s;
 }
+
 
 .grid > article:hover {
     transform: translate(5px);
@@ -351,7 +372,17 @@ article a{
     text-align: center;
     font-size: 20px;
 }
-
+.lihat{
+    height: 40px;
+    font-size: 18px;
+    font-weight: 5px;
+    margin: 0px;
+    background-color: #42D12C;
+    color: white;
+    border-radius: 18px;
+    cursor: pointer;
+    
+}
 .news .lihat{
     height: 40px;
     width: 150px;
@@ -407,7 +438,7 @@ article a{
     margin-top: 0px;
     background-color: #F7F1CB;
     text-align: center;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
   }
 
   .shop1 img {
