--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -512,8 +512,14 @@ article a{
 }
 
 .tabel-profil {
-    padding-top: 40px;
+    margin-top: 30px;
 }
+td.tabel-profil {
+    height: 12px!important;
+}
+/* th.tabel-profil {
+    height: 12px!important;
+} */
 
 .tabel-profil h2{
     font-weight: bold;
