--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -272,9 +272,24 @@ nav a {
     box-shadow: 2px 2px 26px 0px rgba(0, 0, 0, 0.3);
 }
 
-.mycard img {
+.mycard .card-img-top {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+}
+
+.bg-link {
+    background-color: #00000005 !important;
+    border-style: solid;
+    border-width: 0.5px;
+    padding: 2px 4px;
+    border-color: #00000040;
+}
+.bg-link:hover {
+    background-color: #ff5400 !important;
+    color: #ebebeb !important;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: #00000040;
 }
 
 .grid {
@@ -761,15 +776,16 @@ td.tabel-profil {
 /* News */
 .banner-news {
     background-color: #ff5400;
-    height: 100px;
+    /* height: 100px; */
     text-align: center;
     padding-top: 20px;
+    padding-bottom: 2px;
 }
 
 .row-news {
     display: flex;
     margin-top: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 /* Kontak */
