--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -708,7 +708,7 @@ td.tabel-profil {
 
 .timeline ul li {
     padding: 20px;
-    background-color: #ff9c6b;
+    background-color: #ff5400;
     color: black;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -942,4 +942,19 @@ td.tabel-profil {
     border-radius: 10px;
     background-color: #00000010 !important;
     color: #2c7e3f;
+}
+
+.video {
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
+.video h2{
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.video .isi-video {
+    justify-content: center;
+    margin-top: 2%;
 }
